General | Resolved an issue where access to /mnt/usb_1 would hang the program/command, when no USB drive was attached: https://github.com/Fourdee/DietPi/issues/684
General | Resolved an issue where alsamixer was unable to load sound card device: https://github.com/Fourdee/DietPi/issues/705
DietPi-Config | Resolved an issue where NTPD Daemon + Drift mode, did not create drift file. This mode has now been moved to systemd-timesyncd: https://github.com/Fourdee/DietPi/issues/709
DietPi-Config | Enabling the RPi camera will now apply the required 128MB minimum GPU memory split, if not already higher: https://github.com/Fourdee/DietPi/issues/706
DietPi-Software | Resolved issues with non-functional RPi camera with DietPi-Cam: https://github.com/Fourdee/DietPi/issues/706
DietPi-Automation | Resolved an issue with automated 1st run installation would hang on Odroid C2, during patch stage: https://github.com/Fourdee/DietPi/issues/689
Sparky SBC | Resolved an issue with touch screen module causing dmesg errors associated with it. This module is now disabled: https://github.com/Fourdee/DietPi/issues/699#issuecomment-271362441

RPi Stretch:
General | RPi 3 Onboard WiFi is now functional.

-----------------------------------------------------------------------------------------------------------

v141
(31/12/16)

Images:
NanoPi NEO | This image has been updated to kernel 4.9, appears more stable to 3.x. Also fixes a few issues relating to USB WiFi and i2c errors: https://github.com/Fourdee/DietPi/issues/667
NanoPi NEO Air | This image has been updated to kernel 4.9, appears more stable to 3.x. Also fixes a few issues relating to onboard WiFi, USB WiFi and i2c errors. Many thanks to @zador-blood-stained at ARMbian to help make this possible: https://github.com/Fourdee/DietPi/issues/640

Changes / Improvements / Optimizations:
DietPi-Software | Reduced the verbosity of onscreen text during apt installations.