@@ -836,8 +836,8 @@ _EOF_
 
 			fi
 
-			# + RPi 3
-			if (( $HW_MODEL == 3 )); then
+			# + RPi 3 (apply to all, as pi-bluetooth package is default installed on all RPi's now)
+			if (( $HW_MODEL < 10 )); then
 
 				systemctl stop hciuart
 				systemctl disable hciuart
@@ -902,6 +902,7 @@ _EOF_
 			if (( $HW_MODEL == 3 )); then
 
 				#pi-bluetooth contains hciuart service and also pulls in firmware: https://github.com/Fourdee/DietPi/issues/693
+				#	Installed by default as of v142
 				if (( ! $(dpkg --get-selections | grep -ci -m1 '^pi-bluetooth') )); then
 
 					apt-get install -y pi-bluetooth
