@@ -2143,7 +2143,21 @@ _EOF_
 		#RPi 3 Bluetooth packages missing: https://github.com/Fourdee/DietPi/issues/693
 		if (( $HW_MODEL < 10 )); then
 
+			# - Check if currently installed/enabled
+			DISABLE_BT=0
+			if (( ! $(dpkg --get-selections | grep -ci -m1 '^bluetooth') )); then
+
+				DISABLE_BT=1
+
+			fi
+
 			apt-get install -y pi-bluetooth --reinstall
+
+			if (( $DISABLE_BT )); then
+
+				/DietPi/dietpi/func/dietpi-set_hardware bluetooth disable
+
+			fi
 
 		fi
 		#-------------------------------------------------------------------------------
@@ -2193,6 +2207,16 @@ _EOF_
 			(( $(cat /DietPi/dietpi.txt | grep 'soundcard=' | grep -ci -m1 'allo-piano') )); then
 
 			whiptail --title "Allo Piano 2.1" --msgbox "The driver for the Allo Piano 2.1 DAC has been updated. \n\nIf you are using a Allo Piano DAC 2.1, please reselect this sound card from dietpi-config, to apply the updated driver." 12 70
+
+		fi
+		#-------------------------------------------------------------------------------
+		#Remove Meveric's CPU governor scripts, all Odroid images
+		if (( $HW_MODEL >= 10 && $HW_MODEL < 20 )); then
+
+			systemctl disable cpu_governor &> /dev/null
+			rm /etc/init.d/cpu_governor &> /dev/null
+			rm /etc/systemd/system/cpu_governor.service &> /dev/null
+			systemctl daemon-reload
 
 		fi
 		#-------------------------------------------------------------------------------
