@@ -25,6 +25,7 @@ General | RPi 3 onboard Bluetooth is now functional: https://github.com/Fourdee/
 General | Odroid C2: Resolved an issue with deb-multimedia repo failing GPG key: https://github.com/Fourdee/DietPi/issues/677
 General | Resolved an issue where access to /mnt/usb_1 would hang the program/command, when no USB drive was attached: https://github.com/Fourdee/DietPi/issues/684
 General | Resolved an issue where alsamixer was unable to load sound card device: https://github.com/Fourdee/DietPi/issues/705
+General | Odroids: Resolved an issue where Meverics custom CPU governor script, would override DietPi applied CPU govs during boot.
 DietPi-Config | Resolved an issue where NTPD Daemon + Drift mode, did not create drift file. This mode has now been moved to systemd-timesyncd: https://github.com/Fourdee/DietPi/issues/709
 DietPi-Config | Enabling the RPi camera will now apply the required 128MB minimum GPU memory split, if not already higher: https://github.com/Fourdee/DietPi/issues/706
 DietPi-Software | Resolved issues with non-functional RPi camera with DietPi-Cam: https://github.com/Fourdee/DietPi/issues/706
